force-app/main/default/objects/Certificate__c/fields/Auto_AI__c.field-meta.xml
<CustomField>
    <fullName>Auto_AI__c</fullName>
    <label>Auto_AI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>