force-app/main/default/objects/Certificate__c/fields/Auto_Any__c.field-meta.xml
<CustomField>
    <fullName>Auto_Any__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Any</label>
    <type>Checkbox</type>
</CustomField>