force-app/main/default/objects/Certificate__c/fields/Auto_BodilyInjury_Accident__c.field-meta.xml
<CustomField>
    <fullName>Auto_BodilyInjury_Accident__c</fullName>
    <label>Auto_BodilyInjury_Accident</label>
    <length>100</length>
    <type>Text</type>
</CustomField>