force-app/main/default/objects/Certificate__c/fields/Auto_CombinedSingleLimit__c.field-meta.xml
<CustomField>
    <fullName>Auto_CombinedSingleLimit__c</fullName>
    <label>Auto_CombinedSingleLimit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>