force-app/main/default/objects/Certificate__c/fields/Auto_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Eff_Date__c</fullName>
    <label>Auto_Eff_Date</label>
    <type>Date</type>
</CustomField>