force-app/main/default/objects/Certificate__c/fields/Auto_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Exp_Date__c</fullName>
    <label>Auto_Exp_Date</label>
    <type>Date</type>
</CustomField>