force-app/main/default/objects/Certificate__c/fields/Auto_Hired__c.field-meta.xml
<CustomField>
    <fullName>Auto_Hired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Hired</label>
    <type>Checkbox</type>
</CustomField>