force-app/main/default/objects/Certificate__c/fields/Auto_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>Auto_INSRLTR__c</fullName>
    <label>Auto_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>