force-app/main/default/objects/Certificate__c/fields/Auto_Limit_Other_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auto_Limit_Other_Amount__c</fullName>
    <label>Auto Limit_Other_Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>