force-app/main/default/objects/Certificate__c/fields/Auto_NonOwned__c.field-meta.xml
<CustomField>
    <fullName>Auto_NonOwned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_NonOwned</label>
    <type>Checkbox</type>
</CustomField>