force-app/main/default/objects/Certificate__c/fields/Auto_Other_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Other_Name__c</fullName>
    <label>Auto - Other Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>