force-app/main/default/objects/Certificate__c/fields/Auto_Owned__c.field-meta.xml
<CustomField>
    <fullName>Auto_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Owned</label>
    <type>Checkbox</type>
</CustomField>