force-app/main/default/objects/Certificate__c/fields/Auto_PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>Auto_PolicyNum__c</fullName>
    <label>Auto_PolicyNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>