force-app/main/default/objects/Certificate__c/fields/Auto_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Scheduled</label>
    <type>Checkbox</type>
</CustomField>