force-app/main/default/objects/Certificate__c/fields/Auto_WS__c.field-meta.xml
<CustomField>
    <fullName>Auto_WS__c</fullName>
    <label>Auto_WS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>