force-app/main/default/objects/Certificate__c/fields/Certificate_Holder__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Holder__c</fullName>
    <label>Certificate Holder</label>
    <type>TextArea</type>
</CustomField>