force-app/main/default/objects/Certificate__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <displayFormat>BKR{00000}</displayFormat>
    <label>Certificate Number</label>
    <type>AutoNumber</type>
</CustomField>