force-app/main/default/objects/Certificate__c/fields/Description_of_Operations__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Operations__c</fullName>
    <label>Description of Operations</label>
    <type>TextArea</type>
</CustomField>