force-app/main/default/objects/Certificate__c/fields/General_Liabiltiy_Aggregate_PerLocation__c.field-meta.xml
<CustomField>
    <fullName>General_Liabiltiy_Aggregate_PerLocation__c</fullName>
    <formula>IF(( AND( Opportunity_Product__r.Product_Name__c  = &quot;General Liability&quot;  ,  (TEXT( Opportunity_Product__r.Aggregate_Applies__c ))= &quot;Per Location&quot;)), &quot;X&quot; , null)</formula>
    <label>General Liabiltiy_Aggregate_PerLocation</label>
    <type>Text</type>
</CustomField>