force-app/main/default/objects/Certificate__c/fields/GeneralLiability_OtherCoverage_B__c.field-meta.xml
<CustomField>
    <fullName>GeneralLiability_OtherCoverage_B__c</fullName>
    <label>GeneralLiability_OtherCoverage_B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>