force-app/main/default/objects/Certificate__c/fields/GeneralLiability_OtherCoverageLimit__c.field-meta.xml
<CustomField>
    <fullName>GeneralLiability_OtherCoverageLimit__c</fullName>
    <label>GeneralLiability_OtherCoverageLimit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>