force-app/main/default/objects/Certificate__c/fields/GeneralLiability_OtherCoverageName_A__c.field-meta.xml
<CustomField>
    <fullName>GeneralLiability_OtherCoverageName_A__c</fullName>
    <label>GeneralLiability_OtherCoverageName_A</label>
    <length>100</length>
    <type>Text</type>
</CustomField>