force-app/main/default/objects/Certificate__c/fields/GL_Agg__c.field-meta.xml
<CustomField>
    <fullName>GL_Agg__c</fullName>
    <label>GL_Agg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>