force-app/main/default/objects/Certificate__c/fields/GL_Agg_PerPolicy__c.field-meta.xml
<CustomField>
    <fullName>GL_Agg_PerPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GL_Agg_PerPolicy</label>
    <type>Checkbox</type>
</CustomField>