force-app/main/default/objects/Certificate__c/fields/GL_AI__c.field-meta.xml
<CustomField>
    <fullName>GL_AI__c</fullName>
    <label>GL_AI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>