force-app/main/default/objects/Certificate__c/fields/GL_Blanket_AI__c.field-meta.xml
<CustomField>
    <fullName>GL_Blanket_AI__c</fullName>
    <formula>AND( Opportunity_Product__r.Product_Name__c = &quot;General Liability&quot;,TEXT( Opportunity_Product__r.Additional_Insured__c ) = &quot;Blanket&quot;)</formula>
    <label>GL Blanket AI</label>
    <type>Checkbox</type>
</CustomField>