force-app/main/default/objects/Certificate__c/fields/GL_Damage_RentedPremises__c.field-meta.xml
<CustomField>
    <fullName>GL_Damage_RentedPremises__c</fullName>
    <label>GL_Damage_RentedPremises</label>
    <length>100</length>
    <type>Text</type>
</CustomField>