force-app/main/default/objects/Certificate__c/fields/GL_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Eff_Date__c</fullName>
    <label>GL_Eff_Date</label>
    <type>Date</type>
</CustomField>