force-app/main/default/objects/Certificate__c/fields/GL_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>GL_INSRLTR__c</fullName>
    <label>GL_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>