force-app/main/default/objects/Certificate__c/fields/GL_Link__c.field-meta.xml
<CustomField>
    <fullName>GL_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL_Link</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Certificates (GL_Link)</relationshipLabel>
    <relationshipName>Certs</relationshipName>
    <type>Lookup</type>
</CustomField>