force-app/main/default/objects/Certificate__c/fields/GL_MedExpense__c.field-meta.xml
<CustomField>
    <fullName>GL_MedExpense__c</fullName>
    <label>GL_MedExpense</label>
    <length>100</length>
    <type>Text</type>
</CustomField>