force-app/main/default/objects/Certificate__c/fields/GL_Occ__c.field-meta.xml
<CustomField>
    <fullName>GL_Occ__c</fullName>
    <label>GL_Occ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>