force-app/main/default/objects/Certificate__c/fields/GL_PersonalAdv__c.field-meta.xml
<CustomField>
    <fullName>GL_PersonalAdv__c</fullName>
    <label>GL_PersonalAdv</label>
    <length>100</length>
    <type>Text</type>
</CustomField>