force-app/main/default/objects/Certificate__c/fields/GL_PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>GL_PolicyNum__c</fullName>
    <label>GL_PolicyNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>