force-app/main/default/objects/Certificate__c/fields/GL_ProdCompOpp__c.field-meta.xml
<CustomField>
    <fullName>GL_ProdCompOpp__c</fullName>
    <label>GL_ProdCompOpp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>