force-app/main/default/objects/Certificate__c/fields/GL_WOS__c.field-meta.xml
<CustomField>
    <fullName>GL_WOS__c</fullName>
    <label>GL_WOS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>