force-app/main/default/objects/Certificate__c/fields/INSR_A_Name__c.field-meta.xml
<CustomField>
    <fullName>INSR_A_Name__c</fullName>
    <label>INSR_A_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>