force-app/main/default/objects/Certificate__c/fields/INSR_B_NAIC__c.field-meta.xml
<CustomField>
    <fullName>INSR_B_NAIC__c</fullName>
    <label>INSR_B_NAIC</label>
    <length>5</length>
    <type>Text</type>
</CustomField>