force-app/main/default/objects/Certificate__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>