force-app/main/default/objects/Certificate__c/fields/OtherPolicy1_BlanketAI__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy1_BlanketAI__c</fullName>
    <formula>IF(( AND( Opportunity_Product__r.Product_Name__c  = &quot;Professional Liability&quot;  ,  (TEXT(Opportunity_Product__r.Additional_Insured__c))= &quot;Blanket&quot;)), &quot;Y&quot; , null)</formula>
    <label>OtherPolicy1_BlanketAI</label>
    <type>Text</type>
</CustomField>