force-app/main/default/objects/Certificate__c/fields/OtherPolicy1_Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy1_Coverage_Name__c</fullName>
    <label>OtherPolicy1_Coverage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>