force-app/main/default/objects/Certificate__c/fields/OtherPolicy1_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy1_Exp_Date__c</fullName>
    <label>OtherPolicy1_Exp_Date</label>
    <type>Date</type>
</CustomField>