force-app/main/default/objects/Certificate__c/fields/OtherPolicy1_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy1_INSRLTR__c</fullName>
    <label>OtherPolicy1_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>