force-app/main/default/objects/Certificate__c/fields/OtherPolicy1_Occ__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy1_Occ__c</fullName>
    <label>OtherPolicy1_Occ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>