force-app/main/default/objects/Certificate__c/fields/OtherPolicy2_Agg__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy2_Agg__c</fullName>
    <label>OtherPolicy2_Agg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>