force-app/main/default/objects/Certificate__c/fields/OtherPolicy2_AI__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy2_AI__c</fullName>
    <label>OtherPolicy2_AI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>