force-app/main/default/objects/Certificate__c/fields/OtherPolicy2_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy2_Eff_Date__c</fullName>
    <label>OtherPolicy2_Eff_Date</label>
    <type>Date</type>
</CustomField>