force-app/main/default/objects/Certificate__c/fields/OtherPolicy2_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy2_INSRLTR__c</fullName>
    <label>OtherPolicy2_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>