force-app/main/default/objects/Certificate__c/fields/OtherPolicy2_PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>OtherPolicy2_PolicyNum__c</fullName>
    <label>OtherPolicy2_PolicyNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>