force-app/main/default/objects/Certificate__c/fields/Umb_Agg__c.field-meta.xml
<CustomField>
    <fullName>Umb_Agg__c</fullName>
    <label>Umb_Agg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>