force-app/main/default/objects/Certificate__c/fields/Umb_AI__c.field-meta.xml
<CustomField>
    <fullName>Umb_AI__c</fullName>
    <label>Umb_AI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>