force-app/main/default/objects/Certificate__c/fields/Umb_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Umb_Deductible__c</fullName>
    <label>Umb_Deductible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>