force-app/main/default/objects/Certificate__c/fields/Umb_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>Umb_Eff_Date__c</fullName>
    <label>Umb_Eff_Date</label>
    <type>Date</type>
</CustomField>