force-app/main/default/objects/Certificate__c/fields/Umb_ExcessType__c.field-meta.xml
<CustomField>
    <fullName>Umb_ExcessType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umb_ExcessType</label>
    <type>Checkbox</type>
</CustomField>