force-app/main/default/objects/Certificate__c/fields/Umb_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Umb_Exp_Date__c</fullName>
    <label>Umb_Exp_Date</label>
    <type>Date</type>
</CustomField>