force-app/main/default/objects/Certificate__c/fields/Umb_Form_OB__c.field-meta.xml
<CustomField>
    <fullName>Umb_Form_OB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umb_Form_OB</label>
    <type>Checkbox</type>
</CustomField>