force-app/main/default/objects/Certificate__c/fields/Umb_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>Umb_INSRLTR__c</fullName>
    <label>Umb_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>