force-app/main/default/objects/Certificate__c/fields/Umb_Occ__c.field-meta.xml
<CustomField>
    <fullName>Umb_Occ__c</fullName>
    <label>Umb_Occ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>