force-app/main/default/objects/Certificate__c/fields/Umb_PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>Umb_PolicyNum__c</fullName>
    <label>Umb_PolicyNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>