force-app/main/default/objects/Certificate__c/fields/Umb_Retention__c.field-meta.xml
<CustomField>
    <fullName>Umb_Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umb_Retention</label>
    <type>Checkbox</type>
</CustomField>