force-app/main/default/objects/Certificate__c/fields/Umb_RetentionAmount__c.field-meta.xml
<CustomField>
    <fullName>Umb_RetentionAmount__c</fullName>
    <label>Umb_RetentionAmount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>