force-app/main/default/objects/Certificate__c/fields/Umb_UmbrellaType__c.field-meta.xml
<CustomField>
    <fullName>Umb_UmbrellaType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umb_UmbrellaType</label>
    <type>Checkbox</type>
</CustomField>