force-app/main/default/objects/Certificate__c/fields/Umb_WS__c.field-meta.xml
<CustomField>
    <fullName>Umb_WS__c</fullName>
    <label>Umb_WS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>