force-app/main/default/objects/Certificate__c/fields/Umbrella_ClaimsMade__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_ClaimsMade__c</fullName>
    <formula>IF(( AND( Opportunity_Product__r.Product_Name__c  = &quot;Umbrella Liability&quot;  ,  (TEXT( Opportunity_Product__r.Form__c ))= &quot;Claims Made&quot;)), &quot;X&quot; , null)</formula>
    <label>Umbrella_ClaimsMade</label>
    <type>Text</type>
</CustomField>