force-app/main/default/objects/Certificate__c/fields/WC_Disease_EaEmployee__c.field-meta.xml
<CustomField>
    <fullName>WC_Disease_EaEmployee__c</fullName>
    <label>WC_Disease_EaEmployee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>