force-app/main/default/objects/Certificate__c/fields/WC_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>WC_Eff_Date__c</fullName>
    <label>WC_Eff_Date</label>
    <type>Date</type>
</CustomField>