force-app/main/default/objects/Certificate__c/fields/WC_EL_EaAccident__c.field-meta.xml
<CustomField>
    <fullName>WC_EL_EaAccident__c</fullName>
    <label>WC_EL_EaAccident</label>
    <length>100</length>
    <type>Text</type>
</CustomField>