force-app/main/default/objects/Certificate__c/fields/WC_INSRLTR__c.field-meta.xml
<CustomField>
    <fullName>WC_INSRLTR__c</fullName>
    <label>WC_INSRLTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>