force-app/main/default/objects/Certificate__c/fields/WC_Other__c.field-meta.xml
<CustomField>
    <fullName>WC_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WC_Other</label>
    <type>Checkbox</type>
</CustomField>