force-app/main/default/objects/Certificate__c/fields/WC_Other_Txt__c.field-meta.xml
<CustomField>
    <fullName>WC_Other_Txt__c</fullName>
    <label>WC_Other_Txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>