force-app/main/default/objects/Certificate__c/fields/WC_OwnerExcluded__c.field-meta.xml
<CustomField>
    <fullName>WC_OwnerExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WC_OwnerExcluded</label>
    <type>Checkbox</type>
</CustomField>