force-app/main/default/objects/Certificate__c/fields/WC_OwnerExcluded_Y__c.field-meta.xml
<CustomField>
    <fullName>WC_OwnerExcluded_Y__c</fullName>
    <formula>IF( WC_OwnerExcluded__c = TRUE , &quot;Y&quot; , null)</formula>
    <label>WC_OwnerExcluded_Y</label>
    <type>Text</type>
</CustomField>