force-app/main/default/objects/Certificate__c/fields/WC_PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>WC_PolicyNum__c</fullName>
    <label>WC_PolicyNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>