force-app/main/default/objects/Certificate__c/fields/WC_Statutory__c.field-meta.xml
<CustomField>
    <fullName>WC_Statutory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WC_Statutory</label>
    <type>Checkbox</type>
</CustomField>