force-app/main/default/objects/Certificate__c/fields/WC_WS__c.field-meta.xml
<CustomField>
    <fullName>WC_WS__c</fullName>
    <label>WC_WS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>